--- a/src/contacty.html
+++ b/src/contacty.html
@@ -202,7 +202,7 @@
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
-                            <a class="btn btn-outline-success" href="./ru/contacty_ru.html">RU</a>
+                            <a class="btn btn-outline-success" href="./ru/contacty.html">RU</a>
                         </div>
                     </li>
                 </ul>
@@ -299,7 +299,7 @@
                     <div class="container hr-line-contacts"></div>
                     <div class="mb-3">
                         <input type="text" name="userName" class="form-control" id="validationName"
-                            placeholder="Ваше Ім'я" minlength="2" required>
+                            placeholder="Ваше ім'я" minlength="2" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" name="telephone" class="form-control validationTelephone tel"
@@ -416,7 +416,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Ім'я" required>
+                                placeholder="Ваше ім'я" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
