--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active " href="#">UA</a>
-                            <a class="btn btn-outline-success " href="./ru/index_ru.html">RU</a>
+                            <a class="btn btn-outline-success " href="./ru/index.html">RU</a>
                         </div>
                     </li>
                 </ul>
@@ -281,7 +281,7 @@
                     <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
                     <div class="mb-3">
                         <input type="text" name="userName" class="form-control main-text-size" id="validationName"
-                            placeholder="Ваше Ім'я" minlength="2" required>
+                            placeholder="Ваше ім'я" minlength="2" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" name="telephone" class="form-control main-text-size validationTelephone tel"
@@ -515,7 +515,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Ім'я" required>
+                                placeholder="Ваше ім'я" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
