--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -136,7 +136,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./index_ru.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
                     <li class="nav-item">
                         <ul class="btn-group">
@@ -146,13 +146,13 @@
                                     НАПРАВЛЕНИЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинов и торговых сетей</a></li>
-                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанов,
                                             офисов</a></li>
-                                    <li><a class="dropdown-item" href="./vending_ru.html">Вендинг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендинг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -165,13 +165,13 @@
                                     ОБОРУДОВАНИЕ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./avtomaty_ru.html">Автоматы, суперавтоматы</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автоматы, суперавтоматы</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./postovie_ru.html">Класические постовые
+                                    <li><a class="dropdown-item" href="./postovie.html">Класические постовые
                                             кофемашины</a></li>
-                                    <li><a class="dropdown-item" href="./kofemolki_ru.html">Кофемолки профессиональные</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кофемолки профессиональные</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty_ru.html">Вендинговые апараты</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендинговые апараты</a>
                                     </li>
                                 </ul>
                             </li>
@@ -185,17 +185,17 @@
                                     ТОВАРЫ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./zernovoy_kofe_ru.html">Зерновой кофе</a></li>
-                                    <li><a class="dropdown-item" href="./moloko_shokolad_ru.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зерновой кофе</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="./syropi_ru.html">Сиропы</a></li>
-                                    <li><a class="dropdown-item" href="./chay_stakany_ru.html">Чай, стаканы, сахар</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропы</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стаканы, сахар</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
@@ -226,7 +226,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Бесплатное оборудование</h5>
                             <p class="card-text main-text-size">Устанавливаем любую модель кофемашины <a
-                                    href="./avtomaty_ru.html">Автомат, Суперавтомат</a>
+                                    href="./avtomaty.html">Автомат, Суперавтомат</a>
                                 без арендной платы, под выполнение объема реализаций кофе. Обеспечиваем тумбами под
                                 аппарат и
                                 рекламными материалами.</p>
@@ -388,7 +388,7 @@
     <div class="container calc">
         <h4 class="p-2 text-center">2. Укажите цену ингредиентов <span class="select">*</span></h4>
         <h6 class="pb-2"><span class="select">*</span>За актуальной ценой обращайтесь к менеджеру <a
-                href="./contacty_ru.html">по телефону или отправьте заявку</a></h6>
+                href="./contacty.html">по телефону или отправьте заявку</a></h6>
         <div class="row text-center">
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
@@ -400,7 +400,7 @@
             </div>
             <div class="col col-md-4">
                 <div class="input-group flex-nowrap mb-3">
-                    <span class="input-group-text calc__input">Сухая мол. смесь, 1 кг</span>
+                    <span class="input-group-text calc__input">Сух. мол. смесь, 1 кг</span>
                     <input id="milk" type="number" min="10" max="1000" step="1" class="form-control price-item"
                         value="400.00">
                     <span class="input-group-text">грн.</span>
@@ -1140,42 +1140,42 @@
             <div class="row">
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/franke.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/franke.webp" class="scale"
                                 alt="franke fm-800"></a>
                         <p>Franke FM-800</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/GaiaStyle.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/GaiaStyle.webp" class="scale"
                                 alt="Bianchi Gaia Style"></a>
                         <p>Bianchi Gaia Style</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/wmf.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/wmf.webp" class="scale"
                                 alt="WMF 1500S"></a>
                         <p>WMF 1500 S</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/GaiaTouch.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/GaiaTouch.webp" class="scale"
                                 alt="Bianchi Gaia Touch"></a>
                         <p>Bianchi Gaia Touch</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/carimali.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/carimali.webp" class="scale"
                                 alt="Carimali BlueDot"></a>
                         <p>Franke FM-800</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty_ru.html"><img src="../img/dlya_magazinov_i_setey/TaliaTouch.webp" class="scale"
+                        <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/TaliaTouch.webp" class="scale"
                                 alt="Bianchi Talia Touch"></a>
                         <p>Bianchi Talia Touch</p>
                     </div>
@@ -1268,7 +1268,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Имя" required>
+                                placeholder="Ваше имя" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
