--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="✔Готовые растворные смеси могут значительно разнообразить меню кофемашины как в чистом виде, так и в миксе с кофе.
-    ✔Все продукты высшего качества производства Голландии и Италии.
-    ✔Яркий насыщенный вкус, любимый и узнаваемый многими клиентами">
-    <meta name="keywords" content="bianchi, кофе, капучино, молоко, ирландский виски">
+    <meta name="description"
+        content="Богатство вкуса и аромата, отборные зёрна и идеально отточенные рецепты блендов – основные отличительные особенности кофе Bianchi.">
+    <meta name="keywords" content="bianchi, кофе, зерново кофе, кофе в зернах, кофе хорека">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Шоколад | Капучино | Молоко | Ирландский Виски</title>
+    <title>Зерновой кофе | Кофе | Чай | Капучино | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -136,7 +135,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./index_ru.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
                     <li class="nav-item">
                         <ul class="btn-group">
@@ -146,13 +145,13 @@
                                     НАПРАВЛЕНИЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинов и торговых сетей</a></li>
-                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанов,
                                             офисов</a></li>
-                                    <li><a class="dropdown-item" href="./vending_ru.html">Вендинг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендинг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -165,13 +164,13 @@
                                     ОБОРУДОВАНИЕ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./avtomaty_ru.html">Автоматы, суперавтоматы</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автоматы, суперавтоматы</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./postovie_ru.html">Класические постовые
+                                    <li><a class="dropdown-item" href="./postovie.html">Класические постовые
                                             кофемашины</a></li>
-                                    <li><a class="dropdown-item" href="./kofemolki_ru.html">Кофемолки профессиональные</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кофемолки профессиональные</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty_ru.html">Вендинговые апараты</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендинговые апараты</a>
                                     </li>
                                 </ul>
                             </li>
@@ -185,21 +184,21 @@
                                     ТОВАРЫ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./zernovoy_kofe_ru.html">Зерновой кофе</a></li>
-                                    <li><a class="dropdown-item" href="./moloko_shokolad_ru.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зерновой кофе</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="./syropi_ru.html">Сиропы</a></li>
-                                    <li><a class="dropdown-item" href="./chay_stakany_ru.html">Чай, стаканы, сахар</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропы</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стаканы, сахар</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
-                            <a class="btn btn-outline-success" href="../moloko_shokolad.html">UA</a>
+                            <a class="btn btn-outline-success" href="../zernovoy_kofe.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
                     </li>
@@ -208,22 +207,26 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Капучино, молоко, шоколад</h3>
+        <h3>Зерновой кофе</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="description container">
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Готовые растворимые смеси могут значительно разнообразить меню
-                    кофемашины как в чистом виде, так и в миксе с кофе.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Кофе крепко вошел в нашу жизнь. Многие просто не мыслят
+                    утро без чашечки ароматного напитка. А ведь действительно — она помогает проснуться даже в самую
+                        хмурую погоду.</small> </h5>
                 <ul>
                     <small>
                         <li>
-                            Все продукты высшего качества производства Голландии и Италии.
+                            Наш кофе изготовлен на ультрасовременных кофейных фабриках Италии и Голландии (ICS) с
+                            применением лучшего оборудования и профессиональных знаний высококлассных мировых
+                            специалистов.
                         </li>
                         <li>
-                            Яркий насыщенный вкус, любимый и узнаваемый многими клиентами.
+                            Богатство вкуса и аромата, отборные зерна и идеально отточенные рецепты блендов – основные
+                            отличные особенности новой линейки кофе Bianchi.
                         </li>
                     </small>
                 </ul>
@@ -235,10 +238,10 @@
     <div class="container hr-line"></div>
     <div class="container cards">
         <div class="row">
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/milk.webp" class="card-img-top combo" alt="Bianchi Creamer">
+                        <img src="../img/zernovoy_kofe/Classic.webp" class="card-img-top" alt="Bianchi Classic">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
@@ -248,19 +251,18 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Сухая молочная смесь "Bianchi Professional"</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi <br> "Classic"</h3>
                         <small>
-                            <p class="lh-sm"><b>Milk Topping та Creamer</b> идеально подходят для приготовления кофейных
-                                напитков. Молочная смесь поражает своей кремовой пеной и мягким вкусом. Подходит для всех
-                                типов кофемашин, работающих с использованием сухого молока.</p>
+                            <p class="lh-sm">Classic — сбалансированный вкус классического обжаривания. Крепкий кофе, с
+                                ореховым запахом, горьковато-сладкий с преобладанием "жареных" оттенков вкуса.</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/hot_cocoa.webp" class="card-img-top" alt="Bianchi Hot Cocoa">
+                        <img src="../img/zernovoy_kofe/Beans1.webp" class="card-img-top" alt="Bianchi #1 Beans Blend">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
@@ -270,19 +272,18 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Какао растворимое"Bianchi Professional"</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi #1 Beans Blend</h3>
                         <small>
-                            <p class="lh-sm">Насыщенный шоколадный вкус и невероятный аромат Какао Bianchi Professional
-                                поднимает настроение и отлично тонизирует! Вкусно как в чистом виде, так в смесях с
-                                другими напитками.</p>
+                            <p class="lh-sm">Bianchi #1 — отличный вариант для утреннего кофе. Крепкий, с запахом темного
+                                шоколада. Горьковатый, с деликатной кислинкой вкус, с легкими "жареными" нотками.</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/irish.webp" class="card-img-top" alt="Bianchi Irish Whiskey">
+                        <img src="../img/zernovoy_kofe/Elit.webp" class="card-img-top" alt="Bianchi Elite">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
@@ -292,90 +293,36 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Капучино Bianchi Ирландский Виски</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi "Elite"</h3>
                         <small>
-                            <p class="lh-sm">Мягко раскрывающийся на молочной основе напиток. Игривое настроение добавляет
-                                лесной орех, который верхними нотами напоминает тот самый напиток, в честь которого и название. А
-                                сладкая конфета завершает композицию шоколадным вкусом.</p>
+                            <p class="lh-sm">Elite — высококачественное зерно, сочетающее в себе деликатную кислинку и
+                                насыщенный вкус профессиональной обжарки.</p>
+                            <p class="lh-sm">Первый глоток раскрывается ярким апельсином и продолжается красным
+                                яблоком. А шоколадное послевкусие удачно сочетается с завершающей мускатной нотой
+                                ореха.</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/catalana.webp" class="card-img-top"
-                            alt="Bianchi Crema Catalana">
+                        <img src="../img/zernovoy_kofe/Fresh.webp" class="card-img-top" alt="Fresh Coffee Roasters">
                         <figcaption class="goods">
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
+                                <li><b>Свежая<br>обжарка</b></li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Капучино Bianchi Крема Каталана</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi "Fresh Coffee Roasters"</h3>
                         <small>
-                            <p class="lh-sm">Нежный вкус каталонского десерта, деликатно сочетающий в себе вкус
-                                крем-брюле, нотки ванили и карамельные оттенки.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container cards">
-        <div class="row justify-content-center">
-            <div class="col col-auto col-sm-6 col-md-5 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/Tasarone Black.webp" class="card-img-top"
-                            alt=" Tasarone Black Edition">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
-                                <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Шоколад Tasarone "Black Edition"</h3>
-                        <small>
-                            <p class="lh-sm">Тёмный горячий шоколад <b>Tasarone "Black Edition"</b> — чотличный напиток,
-                                созданный для настоящих гурманов.</p>
-                            <p class="lh-sm">Повышенное содержание какао-порошка (32%).</p>
-                            <p class="lh-sm">Более консервативный вкус и аромат, чем у Tasarone Primo Gusto.</p>
-                            <p class="lh-sm">Здесь использован другой сорт какао и меньше сахара.</p>
-                            <p class="lh-sm">Не содержит консервантов, красителей, дополнительных ароматизаторов,
-                                стабилизаторов, усилителей вкуса и других пищевых добавок.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-auto col-sm-6 col-md-5 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="../img/moloko_shokolad/Tasarone Primo Gusto.webp" class="card-img-top"
-                            alt="Tasarone Primo Gusto">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
-                                <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Шоколад Tasarone "Primo Gusto"</h3>
-                        <small>
-                            <p class="lh-sm"> <b>Tasarone "Primo Gusto"</b> — горячий шоколад с очень мягким и нежным
-                                вкусом.</p>
-                            <p class="lh-sm">Содержание какао-порошка меньше, чем у Primo Gusto (16-17%).</p>
-                            <p class="lh-sm">Раскрывает сливочный вкус в паре с молоком.</p>
-                            <p class="lh-sm">Не содержит консервантов, красителей, дополнительных ароматизаторов,
-                                стабилизаторов, усилителей вкуса и других пищевых добавок.</p>
+                            <p class="lh-sm">Bianchi Fresh — мягко обжаренное зерно с умеренной яблочной кислинкой.
+                                Зеленое яблоко и спелая вишня в сочетании дают свежий вкус, дополняемый последним
+                                глотком фундук и шоколад.</p>
+                            <p class="lh-sm">Именно с такого кофе хорошо начинается утро.</p>
                         </small>
                     </div>
                 </div>
@@ -480,7 +427,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Имя" required>
+                                placeholder="Ваше имя" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
