--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -200,7 +200,7 @@
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
-                            <a class="btn btn-outline-success" href="./ru/vending_avtomaty_ru.html">RU</a>
+                            <a class="btn btn-outline-success" href="./ru/vending_avtomaty.html">RU</a>
                         </div>
                     </li>
                 </ul>
@@ -266,7 +266,7 @@
                             <p class="lh-sm">Панель выбору з великими,
                                 інтуїтивними кнопками з підсвічуванням,обладнана інноваційною технологією STT-Soft Touch
                                 Technology (технологія легкого натискання), яка розпізнає людський дотик. Ця технологія
-                                застосовується ексклюзивно в вендінг машинах Bianchi Industry. 
+                                застосовується ексклюзивно в вендінг машинах Bianchi Industry.</p> 
                             <p class="lh-sm">Можливість
                                 індивідуального вибору дозування цукру.</p>
                         </small>
@@ -296,7 +296,7 @@
                         <h3 class="text-center">Bianchi LEI 600 Smart</h3>
                         <small>
                             <p class="lh-sm">Автоматична вендінг-машина для приготування гарячих напоїв місткістю
-                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв. 
+                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв.</p> 
                             <p class="lh-sm">Обладнана системою
                                 автоматичного регулювання помолу кави, що гарантує найвищу якість напоїв.</p>
                         </small>
@@ -326,7 +326,7 @@
                         <h3 class="text-center">Bianchi LEI 600 Touch</h3>
                         <small>
                             <p class="lh-sm">Вендінговий кавовий автомат місткістю 600 чашок на 30 напоїв з
-                                інтерактивною сенсорною панеллю вибору напоїв. 
+                                інтерактивною сенсорною панеллю вибору напоїв.</p> 
                             <p class="lh-sm">У меню апарату входять кілька типів
                                 кавових напоїв на основі зернової кави, шоколаду, розчинних кавових інгредієнтів а також
                                 чай.</p>
@@ -460,7 +460,7 @@
                                 концерном N&W (Necta&Wittenborg). </p>
                             <p class="lh-sm">Обладнаний сенсорним інтерактивним екраном. </p>
                             <p class="lh-sm">Дозволяє
-                                готувати до 12-ти видів напоїв. 
+                                готувати до 12-ти видів напоїв.</p> 
                             <p class="lh-sm">В апарат завантажуються два види стаканів для напоїв
                                 різного об'єму. </p>
                             <p class="lh-sm">Дизайн виділяє автомати Wittenborg 7600 в загальній масі автоматів, що
@@ -630,7 +630,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Ім'я" required>
+                                placeholder="Ваше ім'я" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
