--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -201,7 +201,7 @@
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
-                            <a class="btn btn-outline-success" href="./ru/dlya_magazinov_i_setey_ru.html">RU</a>
+                            <a class="btn btn-outline-success" href="./ru/dlya_magazinov_i_setey.html">RU</a>
                         </div>
                     </li>
                 </ul>
@@ -1268,7 +1268,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Ім'я" required>
+                                placeholder="Ваше ім'я" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
