--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -200,7 +200,7 @@
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
-                            <a class="btn btn-outline-success" href="./ru/kofemolki_ru.html">RU</a>
+                            <a class="btn btn-outline-success" href="./ru/kofemolki.html">RU</a>
                         </div>
                     </li>
                 </ul>
@@ -417,7 +417,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Ім'я" required>
+                                placeholder="Ваше ім'я" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
