--- a/src/ru/chay_stakany.html
+++ b/src/ru/chay_stakany.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Богатство вкуса и аромата, отборные зёрна и идеально отточенные рецепты блендов – основные отличительные особенности кофе Bianchi.">
-    <meta name="keywords" content="bianchi, кофе, зерново кофе, кофе в зернах, кофе хорека">
+    <meta name="description" content="Золотые стаканы компании Bianchi Professional узнаваемы потребителем во многих городах Украины.
+    | Стаканы производятся из прочного качественного картона с применением наружной ламинации
+   В ассортименте представлены разные объемы.">
+    <meta name="keywords" content="bianchi, кофе, стаканы для кофе, стаканы для чая">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Зерновой кофе | Кофе | Чай | Капучино | Bianchi Professional</title>
+    <title>Стаканы для кофе та чаю | Стаканы для вендинга и ХоРеКи</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -135,7 +136,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./index_ru.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
                     <li class="nav-item">
                         <ul class="btn-group">
@@ -145,13 +146,13 @@
                                     НАПРАВЛЕНИЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинов и торговых сетей</a></li>
-                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанов,
                                             офисов</a></li>
-                                    <li><a class="dropdown-item" href="./vending_ru.html">Вендинг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендинг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -164,13 +165,13 @@
                                     ОБОРУДОВАНИЕ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./avtomaty_ru.html">Автоматы, суперавтоматы</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автоматы, суперавтоматы</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./postovie_ru.html">Класические постовые
+                                    <li><a class="dropdown-item" href="./postovie.html">Класические постовые
                                             кофемашины</a></li>
-                                    <li><a class="dropdown-item" href="./kofemolki_ru.html">Кофемолки профессиональные</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кофемолки профессиональные</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty_ru.html">Вендинговые апараты</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендинговые апараты</a>
                                     </li>
                                 </ul>
                             </li>
@@ -184,21 +185,21 @@
                                     ТОВАРЫ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./zernovoy_kofe_ru.html">Зерновой кофе</a></li>
-                                    <li><a class="dropdown-item" href="./moloko_shokolad_ru.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зерновой кофе</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="./syropi_ru.html">Сиропы</a></li>
-                                    <li><a class="dropdown-item" href="./chay_stakany_ru.html">Чай, стаканы, сахар</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропы</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стаканы, сахар</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
-                            <a class="btn btn-outline-success" href="../zernovoy_kofe.html">UA</a>
+                            <a class="btn btn-outline-success" href="../chay_stakany.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
                     </li>
@@ -207,138 +208,79 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Зерновой кофе</h3>
-    </div>
-    <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="description container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Кофе крепко вошел в нашу жизнь. Многие просто не мыслят
-                    утро без чашечки ароматного напитка. А ведь действительно — она помогает проснуться даже в самую
-                        хмурую погоду.</small> </h5>
-                <ul>
-                    <small>
-                        <li>
-                            Наш кофе изготовлен на ультрасовременных кофейных фабриках Италии и Голландии (ICS) с
-                            применением лучшего оборудования и профессиональных знаний высококлассных мировых
-                            специалистов.
-                        </li>
-                        <li>
-                            Богатство вкуса и аромата, отборные зерна и идеально отточенные рецепты блендов – основные
-                            отличные особенности новой линейки кофе Bianchi.
-                        </li>
-                    </small>
-                </ul>
-            </div>
-            <div class="col"></div>
-        </div>
+        <h3>Стаканы, сахар</h3>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
     <div class="container cards">
         <div class="row">
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/zernovoy_kofe/Classic.webp" class="card-img-top" alt="Bianchi Classic">
+                        <img src="../img/chay_sahar/assorti.webp" class="card-img-top combo" alt="Tea">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
+                                <li><b>Большой<br>ассотртимент<br>вкусов</b></li>
                                 <br>
-                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
+                                <li><b>Объём стакана:<br></b>250 мл</li>
+                                
+                                <!-- <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li> -->
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кофе в зернах Bianchi <br> "Classic"</h3>
+                        <h3 class="text-center">Чай Bianchi в ассортименте и картонный фирменный стакан</h3>
                         <small>
-                            <p class="lh-sm">Classic — сбалансированный вкус классического обжаривания. Крепкий кофе, с
-                                ореховым запахом, горьковато-сладкий с преобладанием "жареных" оттенков вкуса.</p>
+                            <p class="lh-sm">Чай в пакетиках в индивидуальном конвертике.</p>
+                                <p class="lh-sm">Коллекция вкусов удовлетворит любой, даже самый взыскательный вкус!</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/zernovoy_kofe/Beans1.webp" class="card-img-top" alt="Bianchi #1 Beans Blend">
+                        <img src="../img/chay_sahar/stakan.webp" class="card-img-top combo" alt="Cup">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
+                                <li><b>Объєм:<br></b>100-300 мл</li>
                                 <br>
-                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
+                                <li><b>Ламинирование:<br></b>одностороннее<br>(внешнее)</li>
+                                <br>
+                                <li><b>Макс.<br>температура:<br></b>до 90°С</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кофе в зернах Bianchi #1 Beans Blend</h3>
+                        <h3 class="text-center">Картонные стаканы</h3>
                         <small>
-                            <p class="lh-sm">Bianchi #1 — отличный вариант для утреннего кофе. Крепкий, с запахом темного
-                                шоколада. Горьковатый, с деликатной кислинкой вкус, с легкими "жареными" нотками.</p>
+                            <p class="lh-sm">Золотые стаканы компании Bianchi Professional узнаваемы потребителем в
+                                многих городах Украины.</p>
+                            <p class="lh-sm">Стаканы изготавливаются из прочного качественного картона с применением наружной.
+                                ламинации.</p>
+                            <p class="lh-sm">В ассортименте представлены разные объемы.</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="../img/zernovoy_kofe/Elit.webp" class="card-img-top" alt="Bianchi Elite">
+                        <img src="../img/chay_sahar/sugar.webp" class="card-img-top combo" alt="Sugar">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
+                                <li><b>Размер стика:<br></b>66х50 мм</li>
                                 <br>
-                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
+                                <li><b>Вес:<br></b>4 г</li>
+                                <br>
+                                <li><b>Допустимое <br> отклонение: <br> массы нетто:<br></b>минус 9%</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кофе в зернах Bianchi "Elite"</h3>
-                        <small>
-                            <p class="lh-sm">Elite — высококачественное зерно, сочетающее в себе деликатную кислинку и
-                                насыщенный вкус профессиональной обжарки.</p>
-                            <p class="lh-sm">Первый глоток раскрывается ярким апельсином и продолжается красным
-                                яблоком. А шоколадное послевкусие удачно сочетается с завершающей мускатной нотой
-                                ореха.</p>
-                        </small>
+                        <h3 class="text-center">Сахар белый <br> порционный в стиках</h3>
                     </div>
                 </div>
-            </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="../img/zernovoy_kofe/Fresh.webp" class="card-img-top" alt="Fresh Coffee Roasters">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Вес:<br></b>1 кг.</li>
-                                <br>
-                                <li><b>Свежая<br>обжарка</b></li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Кофе в зернах Bianchi "Fresh Coffee Roasters"</h3>
-                        <small>
-                            <p class="lh-sm">Bianchi Fresh — мягко обжаренное зерно с умеренной яблочной кислинкой.
-                                Зеленое яблоко и спелая вишня в сочетании дают свежий вкус, дополняемый последним
-                                глотком фундук и шоколад.</p>
-                            <p class="lh-sm">Именно с такого кофе хорошо начинается утро.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /////////////////////////////////////Toast///////////////////////////// -->
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="60000">
-            <div class="toast-header">
-                <img src="../img/logo_popup.webp" class="rounded me-2" alt="logo">
-                <strong class="me-auto">Хотите рассчитать себестоимость напитков?</strong>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
-            </div>
-            <div class="toast-body text-center fw-bold">
-                Воспользуйтесь нашим <a href="../dlya_magazinov_i_setey.html#calc">калькулятором</a>.
             </div>
         </div>
     </div>
@@ -427,7 +369,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Имя" required>
+                                placeholder="Ваше имя" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
