--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -137,7 +137,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./index_ru.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
                     <li class="nav-item">
                         <ul class="btn-group">
@@ -147,13 +147,13 @@
                                     НАПРАВЛЕНИЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинов и торговых сетей</a></li>
-                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанов,
                                             офисов</a></li>
-                                    <li><a class="dropdown-item" href="./vending_ru.html">Вендинг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендинг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -166,13 +166,13 @@
                                     ОБОРУДОВАНИЕ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./avtomaty_ru.html">Автоматы, суперавтоматы</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автоматы, суперавтоматы</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./postovie_ru.html">Класические постовые
+                                    <li><a class="dropdown-item" href="./postovie.html">Класические постовые
                                             кофемашины</a></li>
-                                    <li><a class="dropdown-item" href="./kofemolki_ru.html">Кофемолки профессиональные</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кофемолки профессиональные</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty_ru.html">Вендинговые апараты</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендинговые апараты</a>
                                     </li>
                                 </ul>
                             </li>
@@ -186,17 +186,17 @@
                                     ТОВАРЫ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./zernovoy_kofe_ru.html">Зерновой кофе</a></li>
-                                    <li><a class="dropdown-item" href="./moloko_shokolad_ru.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зерновой кофе</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="./syropi_ru.html">Сиропы</a></li>
-                                    <li><a class="dropdown-item" href="./chay_stakany_ru.html">Чай, стаканы, сахар</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропы</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стаканы, сахар</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
@@ -297,7 +297,7 @@
                     <div class="container hr-line-contacts"></div>
                     <div class="mb-3">
                         <input type="text" name="userName" class="form-control" id="validationName"
-                            placeholder="Ваше Имя" minlength="2" required>
+                            placeholder="Ваше имя" minlength="2" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" name="telephone" class="form-control validationTelephone tel"
@@ -415,7 +415,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Имя" required>
+                                placeholder="Ваше имя" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
