--- a/src/ru/postovie.html
+++ b/src/ru/postovie.html
@@ -136,7 +136,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./index_ru.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
                     <li class="nav-item">
                         <ul class="btn-group">
@@ -146,13 +146,13 @@
                                     НАПРАВЛЕНИЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_magazinov_i_setey.html">Для
                                             магазинов и торговых сетей</a></li>
-                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov_ru.html">Для
+                                    <li><a class="dropdown-item" href="./dlya_cafe_restoranov.html">Для
                                             кафе,
                                             ресторанов,
                                             офисов</a></li>
-                                    <li><a class="dropdown-item" href="./vending_ru.html">Вендинг</a></li>
+                                    <li><a class="dropdown-item" href="./vending.html">Вендинг</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -165,13 +165,13 @@
                                     ОБОРУДОВАНИЕ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./avtomaty_ru.html">Автоматы, суперавтоматы</a>
+                                    <li><a class="dropdown-item" href="./avtomaty.html">Автоматы, суперавтоматы</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./postovie_ru.html">Класические постовые
+                                    <li><a class="dropdown-item" href="./postovie.html">Класические постовые
                                             кофемашины</a></li>
-                                    <li><a class="dropdown-item" href="./kofemolki_ru.html">Кофемолки профессиональные</a>
+                                    <li><a class="dropdown-item" href="./kofemolki.html">Кофемолки профессиональные</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty_ru.html">Вендинговые апараты</a>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендинговые апараты</a>
                                     </li>
                                 </ul>
                             </li>
@@ -185,17 +185,17 @@
                                     ТОВАРЫ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./zernovoy_kofe_ru.html">Зерновой кофе</a></li>
-                                    <li><a class="dropdown-item" href="./moloko_shokolad_ru.html">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="./zernovoy_kofe.html">Зерновой кофе</a></li>
+                                    <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="./syropi_ru.html">Сиропы</a></li>
-                                    <li><a class="dropdown-item" href="./chay_stakany_ru.html">Чай, стаканы, сахар</a></li>
+                                    <li><a class="dropdown-item" href="./syropi.html">Сиропы</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стаканы, сахар</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
+                        <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
                         <div class="btn-group lang" role="group">
@@ -256,7 +256,7 @@
                             Большая платформа для чашек с электроподогревом. <br>
                             Ручной капучинатор для взбивания пышной молочной пенки. <br>
                             Наличие датчика уровня воды и давления. <br>
-                            Кофемолки можно посмотреть <a href="./kofemolki_ru.html">здесь</a>.</p>
+                            Кофемолки можно посмотреть <a href="./kofemolki.html">здесь</a>.</p>
                         <ul>
                             <li><b>Габариты (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
                             <li><b>Мощность: </b>1,8 кВт</li>
@@ -355,7 +355,7 @@
                     <div class="modal-body">
                         <div class="mb-3">
                             <input type="text" name="userNameModal" class="form-control" id="validationNameModal"
-                                placeholder="Ваше Имя" required>
+                                placeholder="Ваше имя" required>
                         </div>
                         <div class="mb-3">
                             <input type="text" name="telephoneModal" class="form-control tel"
