--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
     <div class="fullscreen-bg">
         <div class="overlay">
         </div>
-        <video loop muted autoplay poster="./img/index/banner.webp" class="fullscreen-bg__video">
+        <video loop muted autoplay poster="./img/index/start.webp" class="fullscreen-bg__video">
             <source src="video/video.ogv" type="video/ogg">
             <source src="video/video.mp4" type="video/mp4">
             <source src="video/video.webm" type="video/webm">
