--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -213,7 +213,7 @@
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
         <div class="container">
-            <a><img src="./img/baner_ru.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/seti_ru.webp" class="img-fluid" alt="net"></a>
         </div>
     </div>
     <!-- /////////////////////////////////////////   Cards    ////////////////////////////////////////     -->
