--- a/src/ru/vending.html
+++ b/src/ru/vending.html
@@ -212,7 +212,7 @@
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
         <div class="container">
-            <a><img src="./img/vending_baner_ru.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/vending_ru.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
