--- a/src/vending.html
+++ b/src/vending.html
@@ -213,7 +213,7 @@
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
         <div class="container">
-            <a><img src="./img/vending/banner.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/vending/vending_start.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
